# halftone

./: .gitattributes  README.md
doc/: misc.bib  note.tex  paper.bib  paper.tex  prior.tex
src/code/: CMakeLists.txt
src/code/ErrorDiffusion/: ArrayConstrainer.cpp  ArrayConstrainer.hpp  CMakeLists.txt  ConstrainedThresholder.cpp  ConstrainedThresholder.hpp  Constrainer.cpp  Constrainer.hpp  CoordinatePixel.cpp  CoordinatePixel.hpp  CounterScanner.cpp  CounterScanner.hpp  Diffuser.cpp  Diffuser.hpp  Distributor.cpp  Distributor.hpp  ErrorDiffusion.vcxproj  FloydSteinbergDiffuser.cpp  FloydSteinbergDiffuser.hpp  FloydSteinbergDistributor.cpp  FloydSteinbergDistributor.hpp  GoodNeighborDiffuser.cpp  GoodNeighborDiffuser.hpp  GoodNeighborDistributor.cpp  GoodNeighborDistributor.hpp  HilbertScanner.cpp  HilbertScanner.hpp  KnuthDiffuser.cpp  KnuthDiffuser.hpp  KnuthDistributor.cpp  KnuthDistributor.hpp  KnuthZhouDiffuser.cpp  KnuthZhouDiffuser.hpp  PlainDiffuser.cpp  PlainDiffuser.hpp  PlainThresholder.cpp  PlainThresholder.hpp  RandomScanner.cpp  RandomScanner.hpp  Scanner.cpp  Scanner.hpp  (+17 more)
src/code/Iterative/: CMakeLists.txt  ClassWeight.cpp  ClassWeight.hpp  ContinuousVoidCluster.cpp  ContinuousVoidCluster.hpp  DiscreteVoidCluster.cpp  DiscreteVoidCluster.hpp  FairClassWeight.cpp  FairClassWeight.hpp  GridContinuousVoidCluster.cpp  GridContinuousVoidCluster.hpp  GridJitterVoidCluster.cpp  GridJitterVoidCluster.hpp  GridRegularVoidCluster.cpp  GridRegularVoidCluster.hpp  Iterative.vcxproj  RainbowClassWeight.cpp  RainbowClassWeight.hpp  VoidCluster.cpp  VoidCluster.hpp  WhiteRandomVoidCluster.cpp  WhiteRandomVoidCluster.hpp
src/code/Main/: CMakeLists.txt  ConstrainedErrorDiffuse.cpp  ErrorDiffuse.cpp  Histogram.cpp  Test.cpp  VoidCluster.cpp  VoidClusterVis.cpp
src/code/Scripts/: demo.py  do.sh  gamma.py  halftone.py  rainbow.sh  regress.sh  transfer.sh
