CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

PROJECT(ErrorDiffusion)

INCLUDE_DIRECTORIES(${Halftone_SOURCE_DIR}/Library)

ADD_LIBRARY(${PROJECT_NAME}
ArrayConstrainer.cpp
ArrayConstrainer.hpp
ConstrainedThresholder.cpp
ConstrainedThresholder.hpp
Constrainer.cpp
Constrainer.hpp
CoordinatePixel.cpp
CoordinatePixel.hpp
CounterScanner.cpp
CounterScanner.hpp
Diffuser.cpp
Diffuser.hpp
Distributor.cpp
Distributor.hpp
ErrorDiffusion.vcxproj
FloydSteinbergDiffuser.cpp
FloydSteinbergDiffuser.hpp
FloydSteinbergDistributor.cpp
FloydSteinbergDistributor.hpp
GoodNeighborDiffuser.cpp
GoodNeighborDiffuser.hpp
GoodNeighborDistributor.cpp
GoodNeighborDistributor.hpp
HilbertScanner.cpp
HilbertScanner.hpp
KnuthDiffuser.cpp
KnuthDiffuser.hpp
KnuthDistributor.cpp
KnuthDistributor.hpp
KnuthZhouDiffuser.cpp
KnuthZhouDiffuser.hpp
PlainDiffuser.cpp
PlainDiffuser.hpp
PlainThresholder.cpp
PlainThresholder.hpp
RandomScanner.cpp
RandomScanner.hpp
Scanner.cpp
Scanner.hpp
SequentialScanner.cpp
SequentialScanner.hpp
SerpentineScanner.cpp
SerpentineScanner.hpp
Thresholder.cpp
Thresholder.hpp
VarCoeffDiffuser.cpp
VarCoeffDiffuser.hpp
VarCoeffDistributor.cpp
VarCoeffDistributor.hpp
ZhouDiffuser.cpp
ZhouDiffuser.hpp
ZhouDistributor.cpp
ZhouDistributor.hpp
ZhouThresholder.cpp
ZhouThresholder.hpp
)
